--- a/_config.yml
+++ b/_config.yml
@@ -153,7 +153,7 @@ paginate: 10
 baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
-
+markdown: kramdown
 kramdown:
   footnote_backlink: "&#8617;&#xfe0e;"
   syntax_highlighter: rouge
