--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ description: >- # used by seo meta and the atom feed
 url: ""
 
 github:
-  username: https://github.com/user20250108 # change to your GitHub username
+  username: user20250108 # change to your GitHub username
 
 twitter:
-  # username: https://x.com/ # change to your Twitter username
+  username: # change to your Twitter username
 
 social:
   # Change to your full name.
